--- a/style/global.css
+++ b/style/global.css
@@ -26,10 +26,6 @@ div[id="board"] {
     float: left;
 }
 
-.card {
-    background-color: salmon;
-}
-
 div[id="cardViewer"] {
     position: absolute;
     border: 2px solid gray;
@@ -46,8 +42,8 @@ div[id="cardBox"] {
     position: relative;
     border: 2px solid gray;
     background-color: lightgreen;
-    width: 250px;
-    height: 250px;
+    max-width: 250px;
+    min-height: 250px;
 
     top: 50%;
     left: 50%;
@@ -59,5 +55,5 @@ div[id="playerMenu"] {
     left: 66%;
     border: 1px dashed cyan;
     width: 300px;
-    height: 600px;
-}
+    min-height: 600px;
+} 
