--- a/style/card.css
+++ b/style/card.css
@@ -2,8 +2,9 @@
     position: relative;
     display: inline-block;
     background-color: burlywood;
-    margin: 2px;
+    margin: 5px;
     padding: 0px;
+    border: 2px solid gray;
     
     width: 54px;
     height: 83px;
@@ -39,6 +40,13 @@ div[id="cardView"] {
     border-radius: 10px;
 }
 
+.mini {
+    width: 100px;
+    height: 10px;
+    position: absolute;
+    z-index: 10;
+}
+
 .select {
-    border: 2px solid red;
+    border: solid red;
 }
