--- a/style/card.css
+++ b/style/card.css
@@ -47,13 +47,15 @@ div[id="cardLabels"] {
     min-height: 60px;
     border-radius: 10px;
     background: linear-gradient(90deg, rgba(255,100,100,0.6),rgba(100,255,100,0.6), rgba(100,100,255,0.6));
+    text-align: center;
 }
 
 .cardViewLbl {
     display: inline-block;
-    font-size: 15px;
+    font-size: 14px;
     font-weight: 600;
     margin: 5px;
+
 }
 
 .mini {
@@ -67,10 +69,24 @@ div[id="cardLabels"] {
     background: linear-gradient(45deg, rgba(0, 119, 255, 0.185),rgba(0, 238, 255, 0.288))
 }
 
+
 .select {
     border: solid rgb(0, 100, 255);
 }
 
 .atk {
     border: solid rgb(255, 50, 50);
+}
+
+.dmgTake {
+    animation-name: dmgAnim;
+    animation-duration: 0.2s;
+    animation-iteration-count: 3; 
+}
+
+@keyframes dmgAnim {
+    0% {transform: translate(-0%, -0%);}
+    25% {transform: translate(-10%, -10%);}
+    75% {transform: translate(15%, 5%);}
+    100% {transform: translate(-0%, -0%);}
 }
