--- a/style/card.css
+++ b/style/card.css
@@ -55,7 +55,6 @@ div[id="cardLabels"] {
     font-size: 14px;
     font-weight: 600;
     margin: 5px;
-
 }
 
 .mini {
@@ -66,9 +65,20 @@ div[id="cardLabels"] {
 }
 
 .moverange {
-    background: linear-gradient(45deg, rgba(0, 119, 255, 0.185),rgba(0, 238, 255, 0.288))
+    background: linear-gradient(45deg, rgba(0, 119, 255, 0.185),rgba(0, 238, 255, 0.288));
 }
 
+.atkrange {
+    background: linear-gradient(45deg, rgba(155, 0, 0, 0.185),rgba(255, 10, 0, 0.288));
+}
+
+.deadCard {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 15;
+    background: linear-gradient(90deg, rgba(0,0,0,0.7), rgba(0,0,0,0.5), rgba(0,0,0,0.7));
+}
 
 .select {
     border: solid rgb(0, 100, 255);
