--- a/style/homeStyle.css
+++ b/style/homeStyle.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('/imgs/fundoinicial.png');
+    background-image: url('../imgs/fundoinicial.jpg');
     background-size: cover; /* Para cobrir todo o tamanho da tela */
     background-repeat: no-repeat; /* Para não repetir a imagem */
     display: flex;
@@ -8,6 +8,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
+    user-select: none;
 }
 
 .container {
@@ -84,4 +85,30 @@ body {
 
 .fas:hover {
     transform: scale(1.3);
+}
+
+.fas img {
+    border-radius: 50%;
+}
+
+.option-button {
+    border-radius: 20%;
+    border: 3px solid transparent;
+    width: 50px;
+    height: 50px;
+
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 35px;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+
+    background: linear-gradient(45deg, #002fff, #ff0000);
+}
+
+.option-button:hover {
+    border: 3px solid white;
+    transition: all 0.3s;
+    transform: scale(1.2);
 }
