--- a/style/homeStyle.css
+++ b/style/homeStyle.css
@@ -1,4 +1,4 @@
-body {
+div[id="endgame"] {
     background-image: url('../imgs/fundoinicial.jpg');
     background-size: cover; /* Para cobrir todo o tamanho da tela */
     background-repeat: no-repeat; /* Para não repetir a imagem */
@@ -97,12 +97,7 @@ body {
     width: 50px;
     height: 50px;
 
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 35px;
-    font-weight: bold;
-    color: white;
-    text-align: center;
+    
 
     background: linear-gradient(45deg, #002fff, #ff0000);
 }
@@ -111,4 +106,11 @@ body {
     border: 3px solid white;
     transition: all 0.3s;
     transform: scale(1.2);
+}
+
+.turn-selector {
+    margin-top: 15px;
+    font-size: 40px;
+    background: linear-gradient(45deg, #002fff, #ff0000);
+    border: 3px solid transparent;
 }
